app/main/components/gallery/components/categoryList/CategoryList.module.css
.container {
  margin-bottom: 16px;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 8px;
}

.header span {
  cursor: pointer;  
}

.header span:first-child {
  font-size: 1rem;
}

.header span:last-child {
  font-size: 0.8rem;
  color: #ffffff99;
  border: 1px solid #ffffff99;
  border-radius: 50px;
  padding: 2px 8px;
}

.carousel {
  display: flex;
  gap: 8px;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  -ms-overflow-style: none;  /* Internet Explorer 10+ */
  scrollbar-width: none; 
}

.carousel::-webkit-scrollbar {
    display: none;
}

.slide {
  scroll-snap-align: start;
  flex-shrink: 0;
  position: relative;
}

.image {
  width: 170px;
  aspect-ratio: 4/3;
  object-fit: cover;
  border-radius: 10px;
}

.info {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 4px;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
}

.info p {
  font-weight: 700;
  font-size: 0.8rem;
}

